@@ -10,6 +10,7 @@
 
 
 Version 4.1.6
+ - Fixed: Indi Page Media Tab: Corrected truncation of title when Lightbox Image opened. (windmillway)
  - Fixed: Indi Page: Corrected Research assistant and Googlemap validation errors, tidied up a few lightbox files  (windmillway)
  - Fixed: Indi Page: Corrected all Validation errors. (windmillway) 
 		1) most within Lightbox files. 
